<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Online Bets</string>


    <string name="button_return">RETURN</string>


    <!-- STRINGS LOGIN -->

    <string name="title_login">LOG IN</string>
    <string name="hint_password">Password</string>
    <string name="button_login">LOG IN</string>
    <string name="text_noRegistry">You do not have an account? Sign up</string>
    <string name="text_emailInvalid">Email empty</string>
    <string name="text_passwordInvalid">Password empty</string>
    <string name="text_errorNoUserInBD">Email or Password incorrected</string>

    <!-- STRINGS PREFERENCES -->

    <string name="text_categorySession">SESSION</string>
    <string name="text_keepSession">Keep Session</string>

    <string name="text_categoryUser">USER</string>
    <string name="text_changeName">Change name user</string>
    <string name="text_changePassword">Change  password</string>
    <string name="text_enterName">Enter name user</string>
    <string name="text_enterPassword">Enter password</string>

    <string name="text_categoryApplication">APPLICATION</string>

    <string name="text_language">Language</string>
    <string name="text_spanish">Spanish</string>
    <string name="text_englis">English</string>

    <string name="text_selectedLanguage">Selected language</string>


    <!-- STRINGS  MAIN -->

    <string name="title_online">ONLINE</string>
    <string name="title_bet">BETS</string>

    <string name="text_welcome">Welcome</string>

    <string name="text_signOf">SIGN OF</string>

    <string name="button_registry">REGISTRY</string>
    <string name="button_bets">BETS</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_result">RESULT</string>


    <!-- STRINGS SETTINGS -->

    <string name="title_monet">Money</string>
    <string name="title_combination">Combination</string>

    <string name="text_moneybet">Money Bet</string>

    <string name="hint_number1">Number 1</string>
    <string name="hint_number2">Number 2</string>


    <string name="button_save">SAVE</string>

    <!-- STRINGS BETS -->

    <string name="title_bets">BETS</string>

    <string name="text_football">Football</string>
    <string name="text_tennis">Tennis</string>
    <string name="text_basketball">Basketball</string>
    <string name="text_handball">Handball</string>

    <string name="button_accept">ACCEPT</string>

    <!-- STRINGS REGISTRY -->

    <string name="title_registry">REGISTRY</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthdate">Birthdate (dd/mm/aaaa)</string>

    <string name="error_email">Email not is valid</string>
    <string name="error_emailAlreadyRegistry">Error, email is already registry </string>

    <string name="button_validate">VALIDATE</string>


    <!-- STRINGS RESULT -->

    <string name="title_result">RESULTS</string>
    <string name="text_sport">Sport</string>
    <string name="text_id">ID_ENCOUNTER</string>
    <string name="text_team1">Team 1</string>
    <string name="text_team2">Team 2</string>
    <string name="text_result1">Result 1</string>
    <string name="text_result2">Result 2</string>

    <string name="error_noResult">No results</string>

    <string name="button_addResult">ADD RESULT</string>

    <!-- STRINGS ADD USER -->

    <string name="hint_team1">Team 1</string>
    <string name="hint_team2">Team 2</string>
    <string name="hint_result1">Result 1</string>
    <string name="hint_result2">Result 1</string>

    <string name="button_add">ADD</string>


    <!-- STRINGS INFORMATION -->

    <string name="title_information">Information</string>
    <string name="text_user">User:</string>
    <string name="text_bet">Category Bet:</string>
    <string name="text_teams">Teams:</string>
    <string name="text_money">Money Bet:</string>
    <string name="text_result">Result Provied:</string>

    <!-- STRINGS ABOUT -->

    <string name="title_about">About</string>

    <string name="text_author">Author: </string>
    <string name="value_autor">JStalin Andrade</string>
    <string name="text_year">Year: </string>
    <string name="value_year">2017</string>


    <!-- STRINGS HELP -->

    <string name="text_help">For the correct operation of the application
First you must register
Then Select the bet
Finally set the bet
Once registered you can see the status of your bet
from the option Information of the bet in the options menu
thanks for your attention
For more information visit our website jstalyn.esy.es
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg
         sdasdjajsdjadjajsjdjkajkdadjlakdkjakjdajdssadasdadadadahjjahkdkedrftyghjnhbgfdrerfggggggggggggggggggggggggggggggggggggggggggggggg

    </string>

    <!-- STRINGS MENU -->

    <string name="option_about">About.</string>
    <string name="option_help">Help</string>
    <string name="option_informationBet">Information</string>
    <string name="option_preferences">Preferences</string>


    <!-- STRING MENSSAGES -->

    <string name="error_noregistred">You are not registred</string>

    <string name="text_tab1">Money</string>
    <string name="text_tab2">Combination</string>

    <string name="error_registry">Error uou can not be ifo you have not registered</string>
    <string name="error_bet">Error you can not make adjustments if you have not selected the type of bet</string>
    <string name="error_draw">This functionality is not available at this time, try it later</string>

    <string name="text_acceptRegistry">You are registered</string>
    <string name="error_missignDate">Error, missing data</string>
    <string name="error_younger">A minor can not register in this application</string>

    <string name="menssage_no_bet">You have not selected any bet</string>
    <string name="menssage_some_bet">The Lite version only supports one type of bet. Buy our paid version</string>
    <string name="menssage_one_bet">Bet saved</string>


    <string name="text_acceptSettings">Settings saved</string>
    <string name="error_no_bets">Choose your bet</string>
    <string name="error_no_numbers">Choose your winning combination</string>
    <string name="error_no_between">Error, each combination must be between 0 and 300</string>

</resources>
