<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.jstalin.apuestasonline.AboutActivity">


    <TextView
        android:id="@+id/textView_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_about" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_author" />

        <TextView
            android:id="@+id/textView_valueAuhtor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_autor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_year" />

        <TextView
            android:id="@+id/textView_valueYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_year" />
    </LinearLayout>

    <Button
        android:id="@+id/textView_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return"
        android:onClick="actionReturn"/>

</LinearLayout>
