<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jstalin.apuestasonline.activities.InformationActivity">

    <TextView
        android:id="@+id/textView_title"
        style="@style/title"
        android:text="@string/title_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textVIew_valueUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bet"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textView_valueBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_money"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textView_valueMoney"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_teams"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textView_valueTeams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_result"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textView_valueResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_return"
        style="@style/button"
        android:text="@string/button_return"
        android:onClick="actionReturn"/>
</LinearLayout>
