<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jstalin.apuestasonline.activities.SettingsActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_moneybet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_moneybet" />

                    <Spinner
                        android:id="@+id/spinner_moneybet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_teams"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <EditText
                            android:id="@+id/editText_number1"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_number1"
                            android:inputType="number" />
                        <EditText
                            android:id="@+id/editText_number2"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_number2"
                            android:inputType="number" />


                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_save"
            style="@style/button"
            android:text="@string/button_save"
            android:layout_marginRight="5dp"
            android:onClick="actionSave"/>

        <Button
            android:id="@+id/button_return"
            style="@style/button"
            android:text="@string/button_return"
            android:layout_marginLeft="5dp"
            android:onClick="actionReturn"/>
    </LinearLayout>
</LinearLayout>
